--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ background-size:cover;
   margin:0;
   border:none;
   display:inline-block;
-  opacity: 0;
+  opacity: 0.2;
 }
 #dancePar {
   position: absolute;
@@ -81,7 +81,7 @@ background-size:cover;
   top: 50px;
 }
 .number{
-  visibility: hidden;
+  visibility: visible;
 }
 @-webkit-keyframes run {
   0% {
@@ -115,14 +115,7 @@ background-size:cover;
   }
 }
 
-@-webkit-keyframes ignition {
-  0%{
-    transform: scale(0)
-  }
-  100%{
-  transform: scale(5)
-  }
-}
+
 @media (max-width:600px){
   .showCase{
     margin-top: 70px;
@@ -133,7 +126,10 @@ background-size:cover;
   }
   .question-container{
     top: 10px;
-    padding: 0 0 20px 20px;
+    padding: 0;
+  }
+  .container1, .container2 {
+
   }
   .data {
     font-size: 12px;
